ops report done

--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -1,12 +1,14 @@
 <app-loader></app-loader>
-<app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
+<div class="_margin-bottom">
+<app-parent-heading [genericHeading]="headings"  [showControl]="false"></app-parent-heading>
+</div>
 <div class="reportDashboard">
 
   <div class="_flex-box _justify-content-center ">
 
     <div class="_full-width">
 
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  _noMarginPadding ">
         <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm" *ngIf="summaryData">
 
           <div class="col-xs-12 _flex-box">
@@ -60,35 +62,36 @@
         <div class="col-xs-12 _noMarginPadding">
           <mat-accordion class="example-headers-align ">
 
-            <mat-expansion-panel class="marginTop" hideToggle [expanded]="true">
-              <mat-expansion-panel-header>
+            <mat-expansion-panel class="marginTop" hideToggle [expanded]="expandedFilters" >
                 <mat-expansion-panel-header>
-                 <span  class="_flex-box">{{'headings.filters' | translate}} :-
+                 <span  class="_flex-box">
+                    <i class="material-icons _padding-right">
+                        filter_list
+                        </i>
+                  {{'headings.filters' | translate}}
                   <span class="_padding-left" >
                   <mat-chip *ngIf=" filterArray?.length"> {{filterArray?.length }} </mat-chip>
                   <mat-chip *ngIf="! filterArray?.length"> 0 </mat-chip>
                   </span>
                   </span>
                 </mat-expansion-panel-header>
-              </mat-expansion-panel-header>
-
-              <mat-chip-list #chipList>
+              <div class="marginTop" *ngIf="filterArray">
+              <mat-chip-list #chipList >
                 <!-- <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable"
                  >
                   {{filter[0]}} : {{filter[1]}} -->
-                  <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable" [removable]="removable"
-                  (removed)="remove(filter)">
-                  {{filter[0]}} : {{filter[1]}}
-                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                  <mat-chip *ngFor="let filter of filterArray" 
+                 >
+                  {{filter[0] | camelcase}} : {{filter[1]}}
                 </mat-chip>
          
               </mat-chip-list>
-           
+            </div>
               <app-dynamic-form [genericData]="filterData" [genericForm]="filterForm" [genericEdit]="true">
               </app-dynamic-form>
 
               <mat-action-row>
-                <button mat-raised-button color="warn"  (click)="filterApply('reset')">{{'buttons.reset'|translate}}</button>
+                <button mat-raised-button   (click)="filterApply('reset')">{{'buttons.reset'|translate}}</button>
                 <button mat-raised-button color="primary" (click)="filterApply('apply')"  class="_margin-left"
                   [disabled]="!filterForm.valid">{{'buttons.apply'|translate}}</button>
               </mat-action-row>
@@ -96,11 +99,11 @@
           </mat-accordion>
         </div>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop" *ngIf="reportGenerate && summaryData">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 _noMarginPadding " *ngIf="reportGenerate && summaryData">
         <mat-card class="_flex-box _justify-content-center col-xs-12" >
           <h4>{{'headings.summary' | translate}} :-</h4>
-          <div class="_flex-box">
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop">
+          <div class="_flex-box flexWarp">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
             <table>
               <tr>
                 <td>{{summaryData.schoolsAssigned.label | camelcase}}</td>
@@ -130,64 +133,88 @@
         </div>
         </mat-card>
       </div>
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop " *ngIf="reportGenerate && schoolReport">
+      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop _noMarginPadding" *ngIf="reportGenerate && schoolReport">
         <div *ngFor="let schoolGraph of schoolReport">
-        <mat-card class="flex-direction-column col-xs-12" *ngIf="schoolGraph.data.length > 0">
-         
-          <h4> {{'headings.schoolReports'| translate}} :-</h4>
+        <mat-card class="flex-direction-column col-xs-12 _noMarginPadding">
+              <h4 class="_flex-box _justify-content-space-between"> {{'headings.schoolReports'| translate}} :-   <div *ngIf="schoolLoading">  <app-individual-loader></app-individual-loader> </div></h4>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-            <mat-form-field [floatLabel]="'never'" class=" _full-width">
-              <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchSchoolValue"
-                (debounceSearch)="searchInApi($event)" placeholder="{{'search'| translate}}"
+            <mat-form-field  class=" _full-width">
+              <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchSchoolValue" [value]="searchSchoolValue"
+                (debounceSearch)="searchInApi('school',$event)" placeholder="{{'search'| translate}}" [debounceTime]="1000"
                 (keyup)="searchVal('school',$event.target.value)">
+                <button mat-button  matSuffix mat-icon-button aria-label="Clear" >
+                    <i class="material-icons">
+                        search
+                        </i>
+                  </button>
             </mat-form-field>
+            </div>
+            <div  *ngIf="schoolGraph.data.length > 0">
             <table>
               <tr >
                 <th *ngFor="let heading of schoolGraph.tabularData.headers">{{heading.label}}</th>
               </tr>
               <tr *ngFor="let school of schoolGraph.data">
-                <td *ngFor="let heading of schoolGraph.tableHeader">{{school[heading]}}</td>
+                <td *ngFor="let heading of schoolGraph.tableHeader">{{school[heading] | blank}}</td>
               </tr>
             </table>
-          </div>
           <div *ngFor="let Chart of schoolGraph.graphData">
             <google-chart class="marginChart" [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
             [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
             [columnNames]="Chart.columnNames">
           </google-chart>
           </div>
-          <app-pagination [length]="schoolGraph.totalCount" [pageLimit]="pageLimit" [pageIndex]="pageIndex" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
+          </div>
+          <div *ngIf="!(schoolGraph.data.length > 0)">
+              <div class="middle">
+                {{'message.noData' | translate}}
+              </div>
+            </div>
+          <app-pagination [length]="schoolGraph.totalCount" [pageLimit]="schoolPageLimit" [pageIndex]="schoolPageIndex" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
               [paginationLabel]="'school'"></app-pagination>
               </mat-card>
             </div>
       </div> 
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop" *ngIf=" reportGenerate && assessorReport">
+
+      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop _noMarginPadding" *ngIf=" reportGenerate && assessorReport">
         <div *ngFor ="let assessorGraph of assessorReport">
-          <mat-card class="flex-direction-column col-xs-12" *ngIf="assessorGraph.data.length > 0">
-            <h4> {{'headings.assessorReports'| translate}} :-</h4>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-              <mat-form-field [floatLabel]="'never'" class=" _full-width">
-                <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchSchoolValue"
-                  (debounceSearch)="searchInApi($event)" placeholder="{{'search'| translate}}"
+          <mat-card class="flex-direction-column col-xs-12" >
+            <h4 class="_flex-box _justify-content-space-between"> {{'headings.assessorReports'| translate}} :-   <div *ngIf="assessorLoading">  <app-individual-loader></app-individual-loader> </div></h4>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  _noMarginPadding ">
+              <mat-form-field  class=" _full-width">
+                <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchAssessorName" [value]="searchAssessorName"
+                  (debounceSearch)="searchInApi('assessor',$event)" placeholder="{{'search'| translate}}" [debounceTime]="1000"
                   (keyup)="searchVal('assessor',$event.target.value)">
+                  <button mat-button  matSuffix mat-icon-button aria-label="Clear" >
+                      <i class="material-icons">
+                          search
+                          </i>
+                    </button>
               </mat-form-field>
+            </div>
+            <div *ngIf="assessorGraph.data.length > 0">
               <table>
                 <tr >
                   <th *ngFor="let heading of assessorGraph.tabularData.headers">{{heading.label}}</th>
                 </tr>
                 <tr *ngFor="let assessor of assessorGraph.data">
-                  <td *ngFor="let heading of assessorGraph.tableHeader">{{assessor[heading]}}</td>
+                  <td *ngFor="let heading of assessorGraph.tableHeader">{{assessor[heading] | blank}}</td>
                 </tr>
               </table>
-            </div>
             <div *ngFor="let Chart of assessorGraph.graphData">
               <google-chart class="marginChart" [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
               [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
               [columnNames]="Chart.columnNames">
             </google-chart>
             </div>
-            <app-pagination [length]="assessorGraph.totalCount" [pageLimit]="pageLimit" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
-                [paginationLabel]="'school'"></app-pagination>
+            </div>
+            <div *ngIf="!(assessorGraph.data.length > 0)">
+                <div class="middle">
+                  {{'message.noData' | translate}}
+                </div>
+              </div>
+            <app-pagination [length]="assessorGraph.totalCount" [pageLimit]="assessorPageLimit" [pageIndex]="assessorPageIndex" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
+                [paginationLabel]="'assessor'"></app-pagination>
           </mat-card>
           </div>
         </div> 
