--- a/src/app/modules/operations/ops-report/ops-report.component.scss
+++ b/src/app/modules/operations/ops-report/ops-report.component.scss
@@ -35,9 +35,7 @@
     align-items: center;
     cursor: pointer;
 }
-.reportDashboard{
-    padding: 20px;
-}
+
 .wrapper{
     padding:0px 20px;
 }
@@ -109,4 +107,23 @@ table {
   }
   .marginChart{
       margin :50px 0 50px 0 ;
+  }
+  .middle{
+      display: flex;
+      justify-content: center;
+      padding: 20px 0px;
+  }
+  .loader {
+    border: 1px solid var(--black-color); /* Light grey */
+    border-top: 1px solid  var(--primary-color); /* Blue */
+    border-radius: 50%;
+    width:10px;
+    height: 10px;
+    animation: spin 2s linear infinite;
+    margin-left: 10px;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
