--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -2,6 +2,9 @@
     // .sideDiv {
     //     display: none !important;
     // }
+    .wrapper{
+        padding :10px !important;
+    }
     .nextButton{
         width: 100% !important;
     }
