changed the things as per review

--- a/src/app/modules/operations/uploading-csv/uploading-csv.component.html
+++ b/src/app/modules/operations/uploading-csv/uploading-csv.component.html
@@ -4,7 +4,7 @@
 
   <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 marginTopBottom">
     <mat-card class="col-xs-12 ">
-      <h4>{{'headings.uploadAssessorCsv' | translate}} :-</h4>
+      <h4>{{'headings.uploadAssessorCsv' | translate}} </h4>
       <div class="_flex-box _justify-content-center _justify-content-space-between  col-sm-6">
         <label for="assessor-file-upload" class="custom-file-upload _flexbox ">
           <div>
@@ -46,7 +46,7 @@
   </div>
   <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 marginTopBottom">
       <mat-card class="col-xs-12 ">
-      <h4>{{'headings.uploadSchoolCsv' | translate}} :-</h4>
+      <h4>{{'headings.uploadSchoolCsv' | translate}} </h4>
 
       <div class="_flex-box _justify-content-center _justify-content-space-between  col-sm-6">
         <label for="school-file-upload" class="custom-file-upload _flexbox ">
