--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -9,7 +9,7 @@
     <div class="_full-width">
 
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  _noMarginPadding ">
-        <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm" *ngIf="summaryData">
+        <!-- <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm" *ngIf="summaryData">
 
           <div class="col-xs-12 _flex-box">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4  _flex-box _justify-content-center  userIcon ">
@@ -58,12 +58,50 @@
             </div>
           </div>
 
-        </mat-card> 
-        <div class="col-xs-12 _noMarginPadding">
-          <mat-accordion class="example-headers-align ">
+        </mat-card>  -->
+        <h3 class="_flex-box _justify-content-center _small-Bottom-Margin">Program Operations Report </h3>
+        <mat-card *ngIf="summaryData">
+            <div class="_flexbox _justify-content-space-between flexWarp">
+                <div class="flexBox col-xs-12 col-md-4 col-lg-4 _justify-content-center">
+                    <span>
+                      <h6 class="_no-wrap">{{summaryData.managerName.label | camelcase}} <span class="_padding-left _padding-right">:</span></h6>
+                    </span>
+                    <span>
+                      <h6 class="subHeading">{{summaryData.managerName.value}}</h6>
+                    </span>
+                  </div>
+                <div class="flexBox  col-xs-12 col-md-4 col-lg-4 _justify-content-center">
+                  <span>
+                    <h6 class="_no-wrap">{{summaryData.programName.label | camelcase}} <span class="_padding-left _padding-right">:</span></h6>
+                  </span>
+                  <span>
+                    <h6 class="subHeading">{{summaryData.programName.value | camelcase}}</h6>
+                  </span>
+                </div>
+                <div class="flexBox  col-xs-12 col-md-4 col-lg-4 _justify-content-center">
+                  <span>
+                    <h6 class="_no-wrap">For the period <span class="_padding-left _padding-right">:</span></h6>
+                  </span>
+                  <span>
+                    <h6 class="subHeading"> - NA - </h6>
+                  </span>
+                </div>
+                <div class="flexBox  col-xs-12 col-md-4 col-lg-4 _justify-content-center">
+                  <span>
+                    <h6 class="_no-wrap">{{summaryData.createdDate.label | camelcase}} <span class="_padding-left _padding-right">:</span></h6>
+                  </span>
+                  <span>
+                    <h6 class="subHeading">{{summaryData.createdDate.value}}</h6>
+                  </span>
+                </div>
 
-            <mat-expansion-panel class="marginTop" hideToggle [expanded]="expandedFilters" >
-                <mat-expansion-panel-header>
+              </div>
+        </mat-card>
+        <div class="col-xs-12 _noMarginPadding">
+          <mat-accordion class="example-headers-align " #myaccordion="matAccordion">
+
+            <mat-expansion-panel class="marginTop" hideToggle [expanded]="expandedFilters"  >
+                <mat-expansion-panel-header (click)=" expandedFilters = !expandedFilters">
                  <span  class="_flex-box">
                     <i class="material-icons _padding-right">
                         filter_list
@@ -101,9 +139,9 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 _noMarginPadding " *ngIf="reportGenerate && summaryData">
         <mat-card class="_flex-box _justify-content-center col-xs-12" >
-          <h4>{{'headings.summary' | translate}} :-</h4>
+          <h4>{{'headings.summary' | translate}} </h4>
           <div class="_flex-box flexWarp">
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
             <table>
               <tr>
                 <td>{{summaryData.schoolsAssigned.label | camelcase}}</td>
@@ -123,69 +161,27 @@
               </tr>
             </table>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop" *ngIf="summaryGraph">
+          <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop" *ngIf="summaryGraph">
             <google-chart class="marginChart" [options]="summaryGraph.chartOptions"
               [title]="summaryGraph.title" style="width : 100%; height: 100%;"
               [data]="summaryGraph.data" [type]="summaryGraph.chartType"
               [columnNames]="summaryGraph.chartColumnNames">
             </google-chart>
-          </div>
+          </div> -->
         </div>
         </mat-card>
       </div>
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop _noMarginPadding" *ngIf="reportGenerate && schoolReport">
-        <div *ngFor="let schoolGraph of schoolReport">
-        <mat-card class="flex-direction-column col-xs-12 _noMarginPadding">
-              <h4 class="_flex-box _justify-content-space-between"> {{'headings.schoolReports'| translate}} :-   <div *ngIf="schoolLoading">  <app-individual-loader></app-individual-loader> </div></h4>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-            <mat-form-field  class=" _full-width">
-              <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchSchoolValue" [value]="searchSchoolValue"
-                (debounceSearch)="searchInApi('school',$event)" placeholder="{{'search'| translate}}" [debounceTime]="1000"
-                (keyup)="searchVal('school',$event.target.value)">
-                <button mat-button  matSuffix mat-icon-button aria-label="Clear" >
-                    <i class="material-icons">
-                        search
-                        </i>
-                  </button>
-            </mat-form-field>
-            </div>
-            <div  *ngIf="schoolGraph.data.length > 0">
-            <table>
-              <tr >
-                <th *ngFor="let heading of schoolGraph.tabularData.headers">{{heading.label}}</th>
-              </tr>
-              <tr *ngFor="let school of schoolGraph.data">
-                <td *ngFor="let heading of schoolGraph.tableHeader">{{school[heading] | blank}}</td>
-              </tr>
-            </table>
-          <div *ngFor="let Chart of schoolGraph.graphData">
-            <google-chart class="marginChart" [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
-            [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
-            [columnNames]="Chart.columnNames">
-          </google-chart>
-          </div>
-          </div>
-          <div *ngIf="!(schoolGraph.data.length > 0)">
-              <div class="middle">
-                {{'message.noData' | translate}}
-              </div>
-            </div>
-          <app-pagination [length]="schoolGraph.totalCount" [pageLimit]="schoolPageLimit" [pageIndex]="schoolPageIndex" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
-              [paginationLabel]="'school'"></app-pagination>
-              </mat-card>
-            </div>
-      </div> 
-
+     
       <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop _noMarginPadding" *ngIf=" reportGenerate && assessorReport">
         <div *ngFor ="let assessorGraph of assessorReport">
           <mat-card class="flex-direction-column col-xs-12" >
-            <h4 class="_flex-box _justify-content-space-between"> {{'headings.assessorReports'| translate}} :-   <div *ngIf="assessorLoading">  <app-individual-loader></app-individual-loader> </div></h4>
+            <h4 class="_flex-box _justify-content-space-between"> {{'headings.assessorReports'| translate}}    <div *ngIf="assessorLoading">  <app-individual-loader></app-individual-loader> </div></h4>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  _noMarginPadding ">
               <mat-form-field  class=" _full-width">
                 <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchAssessorName" [value]="searchAssessorName"
                   (debounceSearch)="searchInApi('assessor',$event)" placeholder="{{'search'| translate}}" [debounceTime]="1000"
                   (keyup)="searchVal('assessor',$event.target.value)">
-                  <button mat-button  matSuffix mat-icon-button aria-label="Clear" >
+                  <button mat-button  matPrefix mat-icon-button aria-label="Clear" >
                       <i class="material-icons">
                           search
                           </i>
@@ -218,5 +214,48 @@
           </mat-card>
           </div>
         </div> 
+        <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop _noMarginPadding" *ngIf="reportGenerate && schoolReport">
+            <div *ngFor="let schoolGraph of schoolReport">
+            <mat-card class="flex-direction-column col-xs-12 _noMarginPadding">
+                  <h4 class="_flex-box _justify-content-space-between"> {{'headings.schoolReports'| translate}}    <div *ngIf="schoolLoading">  <app-individual-loader></app-individual-loader> </div></h4>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
+                <mat-form-field  class=" _full-width">
+                  <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchSchoolValue" [value]="searchSchoolValue"
+                    (debounceSearch)="searchInApi('school',$event)" placeholder="{{'search'| translate}}" [debounceTime]="1000"
+                    (keyup)="searchVal('school',$event.target.value)">
+                    <button mat-button  matPrefix mat-icon-button aria-label="Clear" >
+                        <i class="material-icons">
+                            search
+                            </i>
+                      </button>
+                </mat-form-field>
+                </div>
+                <div  *ngIf="schoolGraph.data.length > 0">
+                <table>
+                  <tr >
+                    <th *ngFor="let heading of schoolGraph.tabularData.headers">{{heading.label}}</th>
+                  </tr>
+                  <tr *ngFor="let school of schoolGraph.data">
+                    <td *ngFor="let heading of schoolGraph.tableHeader">{{school[heading] | blank}}</td>
+                  </tr>
+                </table>
+              <div *ngFor="let Chart of schoolGraph.graphData">
+                <google-chart class="marginChart"  [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
+                [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
+                [columnNames]="Chart.columnNames">
+              </google-chart>
+              </div>
+              </div>
+              <div *ngIf="!(schoolGraph.data.length > 0)">
+                  <div class="middle">
+                    {{'message.noData' | translate}}
+                  </div>
+                </div>
+              <app-pagination [length]="schoolGraph.totalCount" [pageLimit]="schoolPageLimit" [pageIndex]="schoolPageIndex" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
+                  [paginationLabel]="'school'"></app-pagination>
+                  </mat-card>
+                </div>
+          </div> 
+    
     </div>
   </div>
