--- a/src/app/modules/report/entity-report/entity-report.component.html
+++ b/src/app/modules/report/entity-report/entity-report.component.html
@@ -5,7 +5,7 @@
   <div *ngIf="entityResult"  >
     <div class="col-xs-12">
         <h3>{{summary.schoolName}}</h3>
-        <h6>Date of Assignment :-  {{summary.generatedAt}}</h6>
+        <h6>Date of Assignment   {{summary.generatedAt}}</h6>
     </div>
    
     <span class="col-xs-12 marginTop" *ngFor="let chart of entityResult">
