--- a/src/app/modules/report/entity-report/components/column-graph/column-graph.component.html
+++ b/src/app/modules/report/entity-report/components/column-graph/column-graph.component.html
@@ -1,3 +1,8 @@
-<p>
-  column-graph works!
-</p>
+<!-- <google-chart class="marginChart" [options]="graphData.chartOptions" style="width : 100%; height: 100%;"
+  [title]="graphData.title" [data]="graphData.data" [type]="graphData.chartType" [columnNames]="graphData.columnNames">
+</google-chart> -->
+<div *ngIf="graphData">
+    <google-chart class="marginChart" style="width : 100%; min-height: 500px;" [options]="graphData.options"
+    [title]="graphData.title" [data]="graphData.data" [type]="graphData.chartType"  [columnNames]="graphData.columnNames">
+  </google-chart> 
+</div>
