--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -122,7 +122,8 @@
                  >
                   {{filter[0]}} : {{filter[1]}} -->
                   <mat-chip *ngFor="let filter of filterArray">
-                    {{filter[0] | camelcase}} : {{filter[1] | date: 'shortDate'}}
+                    <span *ngIf="filter[0] == 'toDate' || filter[0] == 'fromDate' ; else no_date"> {{filter[0] | camelcase}} : {{filter[1] | date: 'shortDate'}}</span>
+                    <ng-template #no_date>{{filter[0] | camelcase}} : {{filter[1]}}</ng-template>
                   </mat-chip>
 
                 </mat-chip-list>
