--- a/src/app/modules/operations/view-schools/view-schools.component.html
+++ b/src/app/modules/operations/view-schools/view-schools.component.html
@@ -23,18 +23,18 @@
               <div class="capitalise"> {{element.name | blank}} </div>
             </td>
           </ng-container>
-          <ng-container matColumnDef="_id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'tableLabel._id'| translate}} </th>
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'tableLabel.status'| translate}} </th>
             <td mat-cell *matCellDef="let element">
-              <div class="capitalise"> {{element._id | blank}}</div>
+              <div class="capitalise"> {{element.status | blank}}</div>
             </td>
           </ng-container>
 
 
-          <ng-container matColumnDef="externalId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'tableLabel.externalId'| translate}}</th>
+          <ng-container matColumnDef="administration">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'tableLabel.administration'| translate}}</th>
             <td mat-cell *matCellDef="let element">
-              <div class="capitalise"> {{element.externalId | blank}}</div>
+              <div class="capitalise"> {{element.administration | blank}}</div>
             </td>
           </ng-container>
 
