--- a/src/app/modules/report/school-list/school-list.component.html
+++ b/src/app/modules/report/school-list/school-list.component.html
@@ -2,7 +2,7 @@
 
 
 <div *ngIf="!error">
-  <app-parent-heading [genericHeading]="headings" [showControl]="true" ></app-parent-heading>
+  <app-parent-heading [genericHeading]="headings" [showControl]="false" ></app-parent-heading>
 
   <div *ngIf=" result > 0 && !smallScreen" class="bigTabel"  (window:resize)="onResize($event)">
     <mat-form-field [floatLabel]="'never'" class=" _full-width">
@@ -23,9 +23,9 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'tableLabel.state'| translate}} </th>
             <td mat-cell *matCellDef="let element"><div class="capitalise">  {{element.state | blank}}</div> </td>
           </ng-container>
-          <ng-container matColumnDef="externalId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'tableLabel.externalId'| translate}}</th>
-            <td mat-cell *matCellDef="let element"><div class="capitalise"> {{element.externalId | blank}}</div></td>
+          <ng-container matColumnDef="addressLine1">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'tableLabel.address'| translate}}</th>
+            <td mat-cell *matCellDef="let element"><div class="capitalise"> {{element.addressLine1 | blank}}</div></td>
           </ng-container>
 
           <ng-container matColumnDef="isParentInterviewCompleted">
