--- a/src/app/modules/report/entity-report/components/table-component/table-component.component.scss
+++ b/src/app/modules/report/entity-report/components/table-component/table-component.component.scss
@@ -3,16 +3,23 @@
     border-spacing: 0;
     width: 100%;
     border: 1px solid #ddd;
-      
-  th, td {
-    text-align: left;
-    padding: 10px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2
-  }
-   .marginChart{
-    margin :50px 0 50px 0 ;
+    margin-top: 20px;
+
+    th,
+    td {
+        text-align: left;
+        padding: 10px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #f2f2f2
+    }
+
+    .marginChart {
+        margin: 50px 0 50px 0;
+    }
+
+    .capitalize {
+      text-transform: capitalize;
+    }
 }
-  }
