--- a/src/app/modules/report/entity-report/components/schools/schools.component.html
+++ b/src/app/modules/report/entity-report/components/schools/schools.component.html
@@ -1,7 +1,11 @@
 <div>
   <app-parent-heading [genericHeading]="headings" [showControl]="true"></app-parent-heading>
-  <div  class="mat-elevation-z1 container col-xs-12 " *ngIf="dataSource">
+  <div class="mat-elevation-z1 container col-xs-12 " *ngIf="dataSource">
     <table mat-table [dataSource]="dataSource" class="_full-width ">
+      <ng-container matColumnDef="externalId">
+        <th mat-header-cell *matHeaderCellDef> External id </th>
+        <td mat-cell *matCellDef="let element"> {{element.externalId}} </td>
+      </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> School </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
