--- a/src/app/modules/report/entity-report/components/table-component/table-component.component.html
+++ b/src/app/modules/report/entity-report/components/table-component/table-component.component.html
@@ -1,7 +1,7 @@
 <div>
   <table class="customTable">
     <tr>
-      <th *ngFor="let header of headers">{{header?.label}}</th>
+      <th class="capitalize" *ngFor="let header of headers">{{header?.value}}</th>
     </tr>
     <tr *ngFor="let data of datas">
       <td *ngFor="let header of headers">{{data[header?.name]}}</td>
