--- a/src/app/modules/report/entity-report/components/schools/schools.component.html
+++ b/src/app/modules/report/entity-report/components/schools/schools.component.html
@@ -1,27 +1,27 @@
 <div>
-  <app-parent-heading [genericHeading]="headings" [showControl]="true"></app-parent-heading>
+  <app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
   <div class="mat-elevation-z1 container col-xs-12 " *ngIf="dataSource">
     <table mat-table [dataSource]="dataSource" class="_full-width ">
       <ng-container matColumnDef="externalId">
-        <th mat-header-cell *matHeaderCellDef> External id </th>
-        <td mat-cell *matCellDef="let element"> {{element.externalId}} </td>
+        <th mat-header-cell *matHeaderCellDef><div class="padding"> External id </div></th>
+        <td mat-cell *matCellDef="let element"><div class="padding">{{element.externalId}}</div>  </td>
       </ng-container>
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> School </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <th mat-header-cell *matHeaderCellDef> <div class="padding">School</div> </th>
+        <td mat-cell *matCellDef="let element"><div class="padding">{{element.name}} </div> </td>
       </ng-container>
       <ng-container matColumnDef="city">
-        <th mat-header-cell *matHeaderCellDef> City </th>
-        <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+        <th mat-header-cell *matHeaderCellDef><div class="padding"> City</div> </th>
+        <td mat-cell *matCellDef="let element"><div class="padding"> {{element.city}}</div>  </td>
       </ng-container>
       <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef> State </th>
-        <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+        <th mat-header-cell *matHeaderCellDef> <div class="padding">State</div> </th>
+        <td mat-cell *matCellDef="let element"><div class="padding">  {{element.state}}</div> </td>
       </ng-container>
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button color="primary" (click)="navigateToEntityReport(element?._id)">View Report</button>
+          <button mat-button color="primary" (click)="navigateToEntityReport(element?._id)"><div class="padding"> View Report</div></button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
