added multiple entity page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,3 +165,6 @@ span:focus {
 ._margin-bottom{
     margin-bottom: 20px !important;
 }
+._capitalize{
+    text-transform: capitalize !important;
+}
