--- a/src/app/modules/report/entity-report/entity-report.component.html
+++ b/src/app/modules/report/entity-report/entity-report.component.html
@@ -25,7 +25,7 @@
 
   <div class="col-xs-12 marginTop" *ngFor="let section of insightReport?.sections">
     <mat-card class="containerAdj">
-      <mat-card-title class="title">
+      <mat-card-title class="title _capitalize">
         {{section?.heading}}
       </mat-card-title>
       <!-- <mat-card-subtitle>
