integrated lib for chart and small changes

--- a/src/app/modules/report/entity-report/components/schools/schools.component.html
+++ b/src/app/modules/report/entity-report/components/schools/schools.component.html
@@ -1,21 +1,26 @@
 <div>
   <app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
-  <div class="mat-elevation-z1 container col-xs-12 " *ngIf="dataSource">
-    <table mat-table [dataSource]="dataSource" class="_full-width ">
+  <mat-form-field [floatLabel]="'never'" class=" _full-width">
+      <input class="filterInput" matInput (keyup)="applyFilter($event.target.value)" placeholder="{{'search'| translate}}">
+    </mat-form-field>
+  <div class="example-container mat-elevation-z8 " *ngIf="dataSource">
+      
+      <div class="tableContainer">
+    <table mat-table [dataSource]="dataSource" matSort class="_full-width ">
       <ng-container matColumnDef="externalId">
-        <th mat-header-cell *matHeaderCellDef><div class="padding"> External id </div></th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header><div class="padding"> External id </div></th>
         <td mat-cell *matCellDef="let element"><div class="padding">{{element.externalId}}</div>  </td>
       </ng-container>
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> <div class="padding">School</div> </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> <div class="padding">School</div> </th>
         <td mat-cell *matCellDef="let element"><div class="padding">{{element.name}} </div> </td>
       </ng-container>
       <ng-container matColumnDef="city">
-        <th mat-header-cell *matHeaderCellDef><div class="padding"> City</div> </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header><div class="padding"> City</div> </th>
         <td mat-cell *matCellDef="let element"><div class="padding"> {{element.city}}</div>  </td>
       </ng-container>
       <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef> <div class="padding">State</div> </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> <div class="padding">State</div> </th>
         <td mat-cell *matCellDef="let element"><div class="padding">  {{element.state}}</div> </td>
       </ng-container>
       <ng-container matColumnDef="action">
@@ -24,9 +29,15 @@
           <button mat-button color="primary" (click)="navigateToEntityReport(element?._id)"><div class="padding"> View Report</div></button>
         </td>
       </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns ; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <div class="middle" *ngIf="dataSource.filterData?.length < 0 && searchVal">
+        {{'message.noData' | translate}}
+    </div>
+    </div>
+    <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[100,50,500]" showFirstLastButtons></mat-paginator>
+
   </div>
   <div *ngIf="!dataSource" class="errorMsg _flex-box">
     No record found
