--- a/src/app/modules/report/entity-report/components/schools/schools.component.scss
+++ b/src/app/modules/report/entity-report/components/schools/schools.component.scss
@@ -20,3 +20,18 @@
     justify-content: center;
     font-size: 12px;
 }
+.example-container {
+    height: calc(100vh - 215px) !important;
+  }
+.tableContainer{
+    height: calc(100vh - 270px) !important;
+    overflow: auto;
+}
+.middle{
+    padding: 30vh 0 0 40%;
+ }
+.mat-paginator-sticky {
+    bottom: 0px;
+    position: sticky;
+    z-index: 10;
+  }
