profile card seperated out

--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -64,20 +64,20 @@
           <div class="_flexbox _justify-content-space-between flexWarp">
             <div class="flexBox col-xs-12 col-md-4 col-lg-4 _justify-content-center">
               <span>
-                <h6 class="_no-wrap">{{summaryData.nameOfTheProgram.label | camelcase}} <span
+                <h6 class="_no-wrap">{{summaryProfileData.nameOfTheProgram.label | camelcase}} <span
                     class="_padding-left _padding-right">:</span></h6>
               </span>
               <span>
-                <h6 class="subHeading">{{summaryData.nameOfTheProgram.value}}</h6>
+                <h6 class="subHeading">{{summaryProfileData.nameOfTheProgram.value}}</h6>
               </span>
             </div>
             <div class="flexBox  col-xs-12 col-md-4 col-lg-4 _justify-content-center">
               <span>
-                <h6 class="_no-wrap">{{summaryData.nameOfTheManager.label | camelcase}} <span
+                <h6 class="_no-wrap">{{summaryProfileData.nameOfTheManager.label | camelcase}} <span
                     class="_padding-left _padding-right">:</span></h6>
               </span>
               <span>
-                <h6 class="subHeading">{{summaryData.nameOfTheManager.value | camelcase}}</h6>
+                <h6 class="subHeading">{{summaryProfileData.nameOfTheManager.value | camelcase}}</h6>
               </span>
             </div>
             <!-- <div class="flexBox  col-xs-12 col-md-4 col-lg-4 _justify-content-center">
@@ -90,11 +90,11 @@
                 </div> -->
             <div class="flexBox  col-xs-12 col-md-4 col-lg-4 _justify-content-center">
               <span>
-                <h6 class="_no-wrap">{{summaryData.dateOfReportGeneration.label | camelcase}} <span
+                <h6 class="_no-wrap">{{summaryProfileData.dateOfReportGeneration.label | camelcase}} <span
                     class="_padding-left _padding-right">:</span></h6>
               </span>
               <span>
-                <h6 class="subHeading">{{summaryData.dateOfReportGeneration.value}}</h6>
+                <h6 class="subHeading">{{summaryProfileData.dateOfReportGeneration.value}}</h6>
               </span>
             </div>
 
