summary api called once

--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -60,7 +60,7 @@
 
         </mat-card>  -->
         <h4 class="_flex-box  _small-Bottom-Margin">Program Operations Report </h4>
-        <mat-card *ngIf="summaryData">
+        <mat-card *ngIf="summaryProfileData">
           <div class="_flexbox _justify-content-space-between flexWarp">
             <div class="flexBox col-xs-12 col-md-4 col-lg-4 _justify-content-center">
               <span>
