--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -10,11 +10,23 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <!-- Displaying of table inside the expansion panel -->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 width">
+
+        <ng-container matColumnDef="externalId">
+            <th mat-header-cell *matHeaderCellDef> {{'tableLabel.externalId'| translate}} </th>
+            <td mat-cell *matCellDef="let element"> {{element.externalId}} </td>
+          </ng-container>
+
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> {{'tableLabel.name'| translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="city">
+          <th mat-header-cell *matHeaderCellDef> {{'tableLabel.city'| translate}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+        </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns ; sticky: true"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
