--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -12,6 +12,23 @@
     <!-- Displaying of table inside the expansion panel -->
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 width">
 
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()"
+                        [aria-label]="checkboxLabel()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? selection.toggle(row) : null"
+                        [checked]="selection.isSelected(row)"
+                        [aria-label]="checkboxLabel(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
         <ng-container matColumnDef="externalId">
             <th mat-header-cell *matHeaderCellDef> {{'tableLabel.externalId'| translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.externalId}} </td>
