--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -128,7 +128,7 @@
 
                 <!-- </mat-chip-list> -->
               </div>
-              <app-dynamic-form [genericData]="filterData" [genericForm]="filterForm" [genericEdit]="true">
+              <app-dynamic-form [genericData]="filterData" [hostUrl]="hostUrl" [genericForm]="filterForm" [genericEdit]="true">
               </app-dynamic-form>
 
               <mat-action-row>
