--- a/src/app/modules/operations/view-schools/view-schools.component.html
+++ b/src/app/modules/operations/view-schools/view-schools.component.html
@@ -11,7 +11,7 @@
           search
         </i>
       </button>
-      <input class="filterInput" matInput appDebounceSearch [searchValue]="searchValue" (debounceSearch)="searchInApi($event)"
+      <input class="filterInput" matInput appDebounceSearch [searchValue]="searchValue" [debounceTime]="200" (debounceSearch)="searchInApi($event)"
         placeholder="{{'search'| translate}}" (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
     <div class="example-container mat-elevation-z8 ">
