--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -24,7 +24,7 @@
           <mat-checkbox (click)="$event.stopPropagation()"
                         (change)="$event ? selection.toggle(row) : null"
                         [checked]="selection.isSelected(row)"
-                        [aria-label]="checkboxLabel(row)">
+                        [aria-label]="checkboxLabel(row)"  (click)="schoolId(row.externalId)">
           </mat-checkbox>
         </td>
       </ng-container>
@@ -45,7 +45,10 @@
         </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns ; sticky: true"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></tr>
     </table>
+    <div class="example-button-row">
+    <button mat-flat-button color="primary" class="genRepBtn">Generate Report</button>
+    </div>
    </mat-expansion-panel>
   </div>
