--- a/src/app/modules/report/entity-report/components/schools/schools.component.html
+++ b/src/app/modules/report/entity-report/components/schools/schools.component.html
@@ -26,7 +26,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button color="primary" (click)="navigateToEntityReport(element?._id)"><div class="padding"> View Report</div></button>
+          <button mat-button color="primary" (click)="navigateToEntityReport(element?._id)"><div class="padding"> Drilldown  Report</div></button>
         </td>
       </ng-container>
       <ng-container matColumnDef="action1">
