--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-
-<mat-card class="title">
-<mat-card-title>Welcome {{curUser}}</mat-card-title>
-</mat-card>
+<div class="_flex-box _justify-content-center">
+    <mat-card class="title">
+        <mat-card-title>Welcome {{curUser}}</mat-card-title>
+    </mat-card>
+</div>
