--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,11 +1,12 @@
 .title{
-    max-width: 300px;
+    min-width: 300px;
     height:140px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    margin:20% auto;   
+    margin:18% auto; 
+    max-width: 500px;  
     
 } 
 mat-card-title{
